--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <a class="logo link" lang="en" href="#"><span class="span">Web</span>Studio</a>
     
             <ul class="nav-menu">
-                <li class="nav-item list" ><a href="#studio">Студия</a></li>
-                <li class="nav-item list" ><a href="#portfolio">Портфолио</a></li>
-                <li class="nav-item list" ><a href="#contacts">Контакты</a></li>
+                <li><a class="nav-item1 list" href="#studio">Студия</a></li>
+                <li><a class="nav-item list" href="#portfolio">Портфолио</a></li>
+                <li><a class="nav-item list" href="#contacts">Контакты</a></li>
             </ul>
         </nav>
         <ul class="list-contact">
-            <li class="contact-mail list"><a href="mailto:info@devstudio">info@devstudio</a>
+            <li ><a class="contact-mail list" href="mailto:info@devstudio">info@devstudio</a>
             </li>
-            <li class="contact-number list"><a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li ><a class="contact-number list" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
