--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <nav>
-            <a class="logo" lang="en" href="index.html"><span class="span">Web</span>Studio</a>
+            <a class="logo link" lang="en" href="index.html"><span class="span">Web</span>Studio</a>
 
             <ul class="nav-menu list">
                 <li class="nav-item"><a class="nav-link link current" href="index.html">Студия</a></li>
@@ -30,7 +30,7 @@
                 <li class="nav-item"><a class="nav-link link" href="#contacts">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="list-contact list">
+        <ul class="list-contact-header list">
             <li><a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li><a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a>
@@ -127,11 +127,11 @@
 
     <footer class="footer">
 
-        <a class="logo-footer" lang="en" href="index.html"><span class="span">Web</span>Studio</a>
+        <a class="logo-footer link" lang="en" href="index.html"><span class="span">Web</span>Studio</a>
 
         <address id="contact">
 
-            <ul class="list-contact list">
+            <ul class="list-contact-footer list">
                 <li><a class="link-footer-map link" href="https://goo.gl/maps/f1McvQRz6KP4o4kd8" target="_blank"
                         rel="noopener noreferrer">г. Киев,
                         пр-т Леси Украинки,26</a></li>
